# Pynances

./: Makefile  README.md  config.py  credentials.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py  token.json
console/: sincronize.sh
etc/: Dockerfile
etc/config/: pre-commit-config.yaml
etc/hasura/: Dockerfile-hasura  Dockerfile-postgres  Makefile  db.sql  docker-compose.yml
etc/hasura/metadata/databases/: databases.yaml
etc/hasura/migrations/Postgres/1682415521901_init/: up.sql
etc/hasura/migrations/Postgres/1682416482252_receipts/: down.sql  up.sql
etc/hasura/migrations/pynances/1683875496322_init/: up.sql
etc/scripts/: build.py
src/: __init__.py  ids.py  movements.py  retrieve_repository.py  sdk.py  write_repository.py
src/account/application/: unit_of_work.py  use_case.py
src/account/domain/: events.py  model.py  repository.py
src/account/infrastructure/: __init__.py  repository.py
src/sdk/: __init__.py  builder.py  contexts.py
src/shared/: DependencyContainer.py  class_locator.py  dependency_container.py
src/shared/application/: __init__.py  middleware.py  unit_of_work.py  use_case.py
src/shared/bus/event/domain/: DomainEvent.py  EventBus.py  EventId.py  EventSubscriber.py
src/shared/domain/: aggregate_root.py  connection.py  domain_event.py  exception.py  repositories.py  valueobject.py
src/shared/infrastructure/: __init__.py  connection.py  exception.py  repository.py  unit_of_work.py
src/users/application/: use_case.py
src/users/domain/: repository.py  user.py
src/users/infrastructure/: __init__.py  repository.py
(+4 files in other folders)
